docs/1.16/core-v1.md
---
permalink: /1.16/core/v1
---

# package v1



## Subpackages

* [affinity](core-v1-affinity.md)
* [attachedVolume](core-v1-attachedVolume.md)
* [awsElasticBlockStoreVolumeSource](core-v1-awsElasticBlockStoreVolumeSource.md)
* [azureDiskVolumeSource](core-v1-azureDiskVolumeSource.md)
* [azureFilePersistentVolumeSource](core-v1-azureFilePersistentVolumeSource.md)
* [azureFileVolumeSource](core-v1-azureFileVolumeSource.md)
* [binding](core-v1-binding.md)
* [capabilities](core-v1-capabilities.md)
* [cephFSPersistentVolumeSource](core-v1-cephFSPersistentVolumeSource.md)
* [cephFSVolumeSource](core-v1-cephFSVolumeSource.md)
* [cinderPersistentVolumeSource](core-v1-cinderPersistentVolumeSource.md)
* [cinderVolumeSource](core-v1-cinderVolumeSource.md)
* [clientIPConfig](core-v1-clientIPConfig.md)
* [componentCondition](core-v1-componentCondition.md)
* [componentStatus](core-v1-componentStatus.md)
* [configMap](core-v1-configMap.md)
* [configMapEnvSource](core-v1-configMapEnvSource.md)
* [configMapKeySelector](core-v1-configMapKeySelector.md)
* [configMapNodeConfigSource](core-v1-configMapNodeConfigSource.md)
* [configMapProjection](core-v1-configMapProjection.md)
* [configMapVolumeSource](core-v1-configMapVolumeSource.md)
* [container](core-v1-container.md)
* [containerImage](core-v1-containerImage.md)
* [containerPort](core-v1-containerPort.md)
* [containerState](core-v1-containerState.md)
* [containerStateRunning](core-v1-containerStateRunning.md)
* [containerStateTerminated](core-v1-containerStateTerminated.md)
* [containerStateWaiting](core-v1-containerStateWaiting.md)
* [containerStatus](core-v1-containerStatus.md)
* [csiPersistentVolumeSource](core-v1-csiPersistentVolumeSource.md)
* [csiVolumeSource](core-v1-csiVolumeSource.md)
* [daemonEndpoint](core-v1-daemonEndpoint.md)
* [downwardAPIProjection](core-v1-downwardAPIProjection.md)
* [downwardAPIVolumeFile](core-v1-downwardAPIVolumeFile.md)
* [downwardAPIVolumeSource](core-v1-downwardAPIVolumeSource.md)
* [emptyDirVolumeSource](core-v1-emptyDirVolumeSource.md)
* [endpointAddress](core-v1-endpointAddress.md)
* [endpointPort](core-v1-endpointPort.md)
* [endpointSubset](core-v1-endpointSubset.md)
* [endpoints](core-v1-endpoints.md)
* [envFromSource](core-v1-envFromSource.md)
* [envVar](core-v1-envVar.md)
* [envVarSource](core-v1-envVarSource.md)
* [ephemeralContainer](core-v1-ephemeralContainer.md)
* [event](core-v1-event.md)
* [eventSeries](core-v1-eventSeries.md)
* [eventSource](core-v1-eventSource.md)
* [execAction](core-v1-execAction.md)
* [fcVolumeSource](core-v1-fcVolumeSource.md)
* [flexPersistentVolumeSource](core-v1-flexPersistentVolumeSource.md)
* [flexVolumeSource](core-v1-flexVolumeSource.md)
* [flockerVolumeSource](core-v1-flockerVolumeSource.md)
* [gcePersistentDiskVolumeSource](core-v1-gcePersistentDiskVolumeSource.md)
* [gitRepoVolumeSource](core-v1-gitRepoVolumeSource.md)
* [glusterfsPersistentVolumeSource](core-v1-glusterfsPersistentVolumeSource.md)
* [glusterfsVolumeSource](core-v1-glusterfsVolumeSource.md)
* [handler](core-v1-handler.md)
* [hostAlias](core-v1-hostAlias.md)
* [hostPathVolumeSource](core-v1-hostPathVolumeSource.md)
* [httpGetAction](core-v1-httpGetAction.md)
* [httpHeader](core-v1-httpHeader.md)
* [iscsiPersistentVolumeSource](core-v1-iscsiPersistentVolumeSource.md)
* [iscsiVolumeSource](core-v1-iscsiVolumeSource.md)
* [keyToPath](core-v1-keyToPath.md)
* [lifecycle](core-v1-lifecycle.md)
* [limitRange](core-v1-limitRange.md)
* [limitRangeItem](core-v1-limitRangeItem.md)
* [limitRangeSpec](core-v1-limitRangeSpec.md)
* [loadBalancerIngress](core-v1-loadBalancerIngress.md)
* [loadBalancerStatus](core-v1-loadBalancerStatus.md)
* [localObjectReference](core-v1-localObjectReference.md)
* [localVolumeSource](core-v1-localVolumeSource.md)
* [namespace](core-v1-namespace.md)
* [namespaceCondition](core-v1-namespaceCondition.md)
* [namespaceSpec](core-v1-namespaceSpec.md)
* [namespaceStatus](core-v1-namespaceStatus.md)
* [nfsVolumeSource](core-v1-nfsVolumeSource.md)
* [node](core-v1-node.md)
* [nodeAddress](core-v1-nodeAddress.md)
* [nodeAffinity](core-v1-nodeAffinity.md)
* [nodeCondition](core-v1-nodeCondition.md)
* [nodeConfigSource](core-v1-nodeConfigSource.md)
* [nodeConfigStatus](core-v1-nodeConfigStatus.md)
* [nodeDaemonEndpoints](core-v1-nodeDaemonEndpoints.md)
* [nodeSelector](core-v1-nodeSelector.md)
* [nodeSelectorRequirement](core-v1-nodeSelectorRequirement.md)
* [nodeSelectorTerm](core-v1-nodeSelectorTerm.md)
* [nodeSpec](core-v1-nodeSpec.md)
* [nodeStatus](core-v1-nodeStatus.md)
* [nodeSystemInfo](core-v1-nodeSystemInfo.md)
* [objectFieldSelector](core-v1-objectFieldSelector.md)
* [objectReference](core-v1-objectReference.md)
* [persistentVolume](core-v1-persistentVolume.md)
* [persistentVolumeClaim](core-v1-persistentVolumeClaim.md)
* [persistentVolumeClaimCondition](core-v1-persistentVolumeClaimCondition.md)
* [persistentVolumeClaimSpec](core-v1-persistentVolumeClaimSpec.md)
* [persistentVolumeClaimStatus](core-v1-persistentVolumeClaimStatus.md)
* [persistentVolumeClaimVolumeSource](core-v1-persistentVolumeClaimVolumeSource.md)
* [persistentVolumeSpec](core-v1-persistentVolumeSpec.md)
* [persistentVolumeStatus](core-v1-persistentVolumeStatus.md)
* [photonPersistentDiskVolumeSource](core-v1-photonPersistentDiskVolumeSource.md)
* [pod](core-v1-pod.md)
* [podAffinity](core-v1-podAffinity.md)
* [podAffinityTerm](core-v1-podAffinityTerm.md)
* [podAntiAffinity](core-v1-podAntiAffinity.md)
* [podCondition](core-v1-podCondition.md)
* [podDNSConfig](core-v1-podDNSConfig.md)
* [podDNSConfigOption](core-v1-podDNSConfigOption.md)
* [podIP](core-v1-podIP.md)
* [podReadinessGate](core-v1-podReadinessGate.md)
* [podSecurityContext](core-v1-podSecurityContext.md)
* [podSpec](core-v1-podSpec.md)
* [podStatus](core-v1-podStatus.md)
* [podTemplate](core-v1-podTemplate.md)
* [podTemplateSpec](core-v1-podTemplateSpec.md)
* [portworxVolumeSource](core-v1-portworxVolumeSource.md)
* [preferredSchedulingTerm](core-v1-preferredSchedulingTerm.md)
* [probe](core-v1-probe.md)
* [projectedVolumeSource](core-v1-projectedVolumeSource.md)
* [quobyteVolumeSource](core-v1-quobyteVolumeSource.md)
* [rbdPersistentVolumeSource](core-v1-rbdPersistentVolumeSource.md)
* [rbdVolumeSource](core-v1-rbdVolumeSource.md)
* [replicationController](core-v1-replicationController.md)
* [replicationControllerCondition](core-v1-replicationControllerCondition.md)
* [replicationControllerSpec](core-v1-replicationControllerSpec.md)
* [replicationControllerStatus](core-v1-replicationControllerStatus.md)
* [resourceFieldSelector](core-v1-resourceFieldSelector.md)
* [resourceQuota](core-v1-resourceQuota.md)
* [resourceQuotaSpec](core-v1-resourceQuotaSpec.md)
* [resourceQuotaStatus](core-v1-resourceQuotaStatus.md)
* [resourceRequirements](core-v1-resourceRequirements.md)
* [scaleIOPersistentVolumeSource](core-v1-scaleIOPersistentVolumeSource.md)
* [scaleIOVolumeSource](core-v1-scaleIOVolumeSource.md)
* [scopeSelector](core-v1-scopeSelector.md)
* [scopedResourceSelectorRequirement](core-v1-scopedResourceSelectorRequirement.md)
* [seLinuxOptions](core-v1-seLinuxOptions.md)
* [secret](core-v1-secret.md)
* [secretEnvSource](core-v1-secretEnvSource.md)
* [secretKeySelector](core-v1-secretKeySelector.md)
* [secretProjection](core-v1-secretProjection.md)
* [secretReference](core-v1-secretReference.md)
* [secretVolumeSource](core-v1-secretVolumeSource.md)
* [securityContext](core-v1-securityContext.md)
* [service](core-v1-service.md)
* [serviceAccount](core-v1-serviceAccount.md)
* [serviceAccountTokenProjection](core-v1-serviceAccountTokenProjection.md)
* [servicePort](core-v1-servicePort.md)
* [serviceSpec](core-v1-serviceSpec.md)
* [serviceStatus](core-v1-serviceStatus.md)
* [sessionAffinityConfig](core-v1-sessionAffinityConfig.md)
* [storageOSPersistentVolumeSource](core-v1-storageOSPersistentVolumeSource.md)
* [storageOSVolumeSource](core-v1-storageOSVolumeSource.md)
* [sysctl](core-v1-sysctl.md)
* [taint](core-v1-taint.md)
* [tcpSocketAction](core-v1-tcpSocketAction.md)
* [toleration](core-v1-toleration.md)
* [topologySelectorLabelRequirement](core-v1-topologySelectorLabelRequirement.md)
* [topologySelectorTerm](core-v1-topologySelectorTerm.md)
* [topologySpreadConstraint](core-v1-topologySpreadConstraint.md)
* [typedLocalObjectReference](core-v1-typedLocalObjectReference.md)
* [volume](core-v1-volume.md)
* [volumeDevice](core-v1-volumeDevice.md)
* [volumeMount](core-v1-volumeMount.md)
* [volumeNodeAffinity](core-v1-volumeNodeAffinity.md)
* [volumeProjection](core-v1-volumeProjection.md)
* [vsphereVirtualDiskVolumeSource](core-v1-vsphereVirtualDiskVolumeSource.md)
* [weightedPodAffinityTerm](core-v1-weightedPodAffinityTerm.md)
* [windowsSecurityContextOptions](core-v1-windowsSecurityContextOptions.md)